[build-system]
requires = ["briefcase"]
build-backend = "briefcase.build"

[tool.briefcase]
project_name = "CloudApp"
bundle = "com.bytecore.cloudapp"
version = "1.0.0"
url = "https://coderafroj.github.io"
author = "Afroj"
author_email = "coderafroj@example.com"
license.file = "LICENSE"

[tool.briefcase.app.cloudapp]
formal_name = "CloudApp"
description = "GitHub file uploader built by Afroj"
sources = ["."]
requires = ["toga", "PyGithub"]

[tool.briefcase.app.cloudapp.android]
requires = ["toga-android"]
